@@ -4,6 +4,7 @@ import com.google.common.collect.Sets;
 import com.google.gson.JsonElement;
 import net.favouriteless.modopedia.api.book.Category;
 import net.minecraft.core.HolderLookup;
+import net.minecraft.core.HolderLookup.Provider;
 import net.minecraft.data.CachedOutput;
 import net.minecraft.data.DataProvider;
 import net.minecraft.data.PackOutput;
@@ -37,9 +38,9 @@ public abstract class ContentSetProvider implements DataProvider {
         this.modId = modId;
     }
 
-    public abstract void buildEntries(BiConsumer<String, JsonElement> output);
+    public abstract void buildEntries(Provider registries, BiConsumer<String, JsonElement> output);
 
-    public abstract void buildCategories(BiConsumer<String, Category> output);
+    public abstract void buildCategories(Provider registries, BiConsumer<String, Category> output);
 
     @Override
     public CompletableFuture<?> run(CachedOutput output) {
@@ -52,13 +53,13 @@ public abstract class ContentSetProvider implements DataProvider {
 
         final List<CompletableFuture<?>> futures = new ArrayList<>();
 
-        buildEntries((id, entry) -> {
+        buildEntries(registries, (id, entry) -> {
             if(!entries.add(id))
                 throw new IllegalStateException("Duplicate entry in " + getName() + " " + id);
             futures.add(DataProvider.saveStable(output, entry, entryPathProvider.json(ResourceLocation.fromNamespaceAndPath(modId, id))));
         });
 
-        buildCategories((id, cat) -> {
+        buildCategories(registries, (id, cat) -> {
             if(!categories.add(id))
                 throw new IllegalStateException("Duplicate category in " + getName() + " " + id);
             futures.add(DataProvider.saveStable(output, registries, Category.codec(), cat, categoryPathProvider.json(ResourceLocation.fromNamespaceAndPath(modId, id))));
